--- a/inline_js/init.css
+++ b/inline_js/init.css
@@ -101,12 +101,16 @@ progress[value]::-webkit-progress-value {
   margin-top: 25px;
 }
 
-#heading {
+.heading {
+  box-shadow: 0px 5px 6px rgba(80, 158, 227, 0.16), 0px 12px 24px rgba(148, 154, 171, 0.08);
+  border-radius: 8px;
   font-size: 16px;
   letter-spacing: 0;
   line-height: 30px;
-  margin-top: 50px;
+  padding: 7px 20px;
   text-align: center;
+  opacity: 1;
+  transition: opacity 800ms cubic-bezier(.165,.84,.44,1);
 }
 
 #status {
