--- a/inline_js/init.css
+++ b/inline_js/init.css
@@ -78,23 +78,26 @@ header {
 
 nav a {
   font-weight: 700;
-  margin-left: 30px;
+  margin-left: 60px;
   margin-right: 10px;
 }
 
 progress[value] {
   -webkit-appearance: none;
   appearance: none;
+  border: 1px solid #509EE3;
+  border-radius: 8px;
+  height: 8px;
   width: 100%;
-  height: 4px;
 }
 
 progress[value]::-webkit-progress-bar {
-  background-color: #DBE9FA;
+  background-color: white;
   border-radius: 8px;
 }
 
 progress[value]::-webkit-progress-value {
+  background-color: green;
   background-color: #4A90E2;
   border-radius: 8px;
 }
