--- a/inline_js/init.css
+++ b/inline_js/init.css
@@ -52,6 +52,7 @@ h2 {
   display: flex;
   flex-direction: column;
   float: right;
+  margin-top: -110px;
   min-height: calc(100vh - 80px);
   justify-content: center;
   position: relative;
@@ -64,6 +65,8 @@ header {
   display: flex;
   justify-content: space-between;
   padding: 20px;
+  position: relative;
+  z-index: 2;
 }
 
 #store-link {
@@ -79,7 +82,7 @@ header {
 }
 
 nav a {
-  font-weight: 700;
+  font-weight: 500;
   margin-left: 60px;
   margin-right: 10px;
 }
@@ -114,6 +117,7 @@ progress[value]::-webkit-progress-value {
   font-size: 14px;
   letter-spacing: 0;
   line-height: 30px;
+  margin-top: -90px;
   padding: 4px 20px;
   text-align: center;
   opacity: 1;
@@ -128,6 +132,7 @@ progress[value]::-webkit-progress-value {
 
 .animation {
   max-width: 100%;
+  mix-blend-mode: multiply;
   opacity: 1;
   transition: opacity 800ms cubic-bezier(.165,.84,.44,1);
   width: 600px;
@@ -158,13 +163,11 @@ progress[value]::-webkit-progress-value {
   }
 
   #right-side {
-    margin-top: -80px;
     min-height: 0;
     width: 100%;
   }
 
   .animation {
-    mix-blend-mode: multiply;
     max-width: 80%;
   }
 
